create registerd customer show part
