# src/app.js
@@ -33,6 +33,7 @@ const pickAndCollectRoutes = require("./routes/pickAndCollect.routes");
 const orderRoutes = require("./routes/order/order.routes");
 const paymentRoutes = require("./routes/payment.routes");
 const contactRoutes = require("./routes/contact.routes");
+const userRoutes = require("./routes/web/customer.routes");
 
 const errorMiddleware = require("./middleware/error.middleware");
 
@@ -130,7 +131,7 @@ app.use("/api/v1/pick-and-collect", pickAndCollectRoutes);
 app.use("/api/v1/orders", orderRoutes);
 app.use("/api/v1/payment", paymentRoutes);
 app.use("/api/v1/contact-us", contactRoutes);
-
+app.use("/api/v1/customers", userRoutes);
 app.use(errorMiddleware);
 
 module.exports = app;
